static/css/style.css
body {
  margin: 0px;
  padding: 0px;
  background-color: #fcfcfc;
  font-family: 'Open Sans', sans-serif;
  font-size: 12pt;
}

a {
      text-decoration: none;
}

a img:hover {
  opacity: 0.85;
}

h1, h2, h3, h4, h5, h6 {
  font-family: 'Open Sans', sans-serif;
  line-height: 1.1;
}

h1 {
  margin-top: 15px;
  margin-bottom: 15px;
  font-weight: bold;
  font-size: 23pt;
}

h2 {
  font-weight: bold;
  font-size: 20pt;
}

h3 {
  font-weight: bold;
  font-size: 16pt;
}

h4 {
  font-size: 16pt;
}

hr {
  width: 70%;
  margin: auto;
  border-color: grey;
  border-width: 1px;
}

::-moz-selection { /* Code for Firefox */
    color: white;
    background: #f6665c;
}

::selection {
    color: white;
    background: #f6665c;
}

nav {
  font-size: 14pt;
  text-align: right;
}


nav ul {
  padding: 0;
  margin-top: 10px;
  margin-bottom: 0;
  line-height: 1.5;
  display: flex;
  flex-direction: column;
}

nav ul li {
      text-transform: uppercase;
      list-style: none;
      padding-left: 25px;
      padding-right: 25px;
      white-space:nowrap;
}

img.avatar {
  width: 150px;
  max-width: 60%;
  margin: 0 50px;
  vertical-align: middle;
}

ul.social {
  white-space:nowrap;
}

ul.social li {
  display: inline-block;
  padding: 0 15px;
  font-size: 7vw;
}

ul.social li a:hover {
  opacity: 0.7;
}

.col-main {
  margin: auto;
  width: 100%;
  max-width: 900px;
}

.adjust-width {
  margin: 0 -16px;
}

article {
  font-size: 13.5pt;
  padding-top: 0!important;
}

main {
  line-height: 1.7;
}

main > p:first-of-type::first-letter {
  font-size: 36pt;
  font-weight: bold;
  font-family: serif;
  line-height: 1;
}

main a {
  color: #f44336;
}

main blockquote {
  border-left:6px solid;
  border-color: black;
  padding-left: 16px;
}

main div.highlight {
  max-height: 600px;
  font-size: 11pt;
  background-color:#f1f1f1;
  overflow: scroll;
  margin: 20px 0px;
}

main pre {
  margin: 0;
  padding: 12px;
}


main p > img {
  max-width: 100%;
  display: block;
  margin: 30px auto 20px auto;
}

main p.content-highlight {
  color: #f44336;
  font-size: 18pt;
  text-align: right;
  font-style: italic;
  width: 50%;
  float: right;
}

.caption {
  text-align: center;
  font-size: 10pt;
  font-style: italic;
  color: grey;
  margin-bottom: 30px;
}

.videoWrapper {
	position: relative;
	padding-bottom: 56.25%; /* 16:9 */
	height: 0;
  margin: 40px 0 10px 0;
}
.videoWrapper iframe {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
}

.blogroll-block {
  padding: 30px 20px;
  display: flex;
  justify-content: center;
}

.empty {
  height: 22px;
}

div#blogroll ul {
  margin: 0;
  padding-left: 15px;
}

div#blogroll ul li {
  list-style: none;
}

#contentinfo {
  width: 100%;
  height: auto;
  font-size: 11pt;
}

#blogroll {
    background-color: #272727;
    color: white;
}

#contact {
  background-color: #272727;
  color: white;
  text-align: right;
  padding-right: 50px;
  padding-bottom: 10px;
}

div#contact ul {
  display: inline-flex;
}

div#contact ul li {
  padding: 0 10px;
  list-style: none;
}

#copyright {
  background-color: #0F0F0F;
}

.post-info {
  display: flex;
  flex-wrap: wrap;
  font-size: 13pt;
}

.headerimage-article {
  margin: auto;
  max-width: 1100px;
}

.headerimage-card {
  margin: 0 -16px;
}

.headerimage-card > img {
  max-width: 100%;
}


#banner {
  display: flex;
  justify-content: space-between;
  margin-left: auto;
  margin-right: auto;
  padding: 16px;
  max-width: 1100px;
}

#logo {
  width: 60px;
  min-width: 60px; /* no resizing! */
  height: 60px;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  background-color: black;
  color: white;
  font-size: 20pt;
  font-weight: bold;
}

#logo:hover {
  opacity: 0.85;
}

#content-title-tag {
  color: #f44336;
  font-size: 36pt;
}

#content-title-category {
  font-family: serif;
  font-size: 7vw;
  line-height: 30vw;
}

#content-title-category-img {
  background-size: cover;
  background-repeat: no-repeat;
  width: 100%;
  height: 30vw;
}

#heyitsme {
  font-family: 'Reenie Beanie';
  font-size: 22vw;
  white-space:nowrap;
}


#introduction {
  display: flex;
  margin: 0 auto;
  max-width: 1000px;
  justify-content: center;
  flex-wrap: wrap;
}

#tagcloud {
  height: 400px;
}

#author-block {
  /*height: auto;*/
  max-width: 100%;
  display: flex;
  flex-wrap: wrap;
}

#author-info {
  display: flex;
  margin-left: 37px;
  margin-top: 15px;
  margin-bottom: 10px;
  width: 80%;
}

#author-name {
  font-weight: bold;
  font-size: 14pt;
}

#author-story {
  font-size: 11pt;
  font-style: italic;
}


/* For Screens larger than 530px, do not use responsive font-sizes */
@media screen and (min-width: 530px) {

  nav ul {
      flex-direction: row;
      margin-top: 24px;
  }

  #heyitsme {
    font-size: 80pt;
  }

  ul.social li {
    font-size: 20pt;
  }

  article {
    font-size: 15pt;
  }

  h1 {
    font-size: 26pt;
  }

  main p.content-highlight {
    font-size: 24pt;
  }

  .adjust-width {
    margin: 0;
  }

  #content-title-category {
    font-size: 40pt;
    line-height: 280px;
  }

  #content-title-tag {
    font-size: 48pt;
  }

  #content-title-category-img {
    height: 280px;
  }

}

